--- a/hed/configs/hed.yaml
+++ b/hed/configs/hed.yaml
@@ -3,13 +3,15 @@
 # snapshot for now : /nas2/harsimrat/hed-testing-deconv-hist-4/models/hed-model-5000
 rar_file: 'http://vcl.ucsd.edu/hed/HED-BSDS.tar'
 # location where HED-BSDS.tar would be downloaded and decompressed (Should already exist)
-download_path: '/home/harsimrat/hed-data'
+download_path: '/opt/dataset/HED-BSDS' # before: '/home/harsimrat/hed-data'
 # location of snapshot and tensorbaord summary events (Should already exist)
-save_dir: /home/harsimrat/workspace/holy-edge/hed
+save_dir: /home/xsoria/PycharmProject/edge-contour/holy-edge/hed
 # location where to put the generated edgemaps during testing (Should already exist)
 test_output: /nas2/harsimrat/hed-testing-deconv-hist-4/test/model-5000
 # parameters from the paper
-model_weights_path: vgg16.npy
+model_weights_path: vgg16_.npy # before vgg16_.npy
+# download the vgg16 weight mode from:
+# https://drive.google.com/open?id=1EVMiOZqbeWf2hWsL7JD5EeVDrugggzk-
 # training batch size, decide with your GPU size
 batch_size_train: 10
 # validation batch size, ran every val_interval
@@ -50,8 +52,8 @@ training:
     n_channels: 3
 # testing data
 testing:
-    dir: HED-BSDS
-    list: HED-BSDS/test.lst
+    dir: /opt/dataset/HED-BSDS
+    list: /opt/dataset/HED-BSDS/test_pair.lst
     #
     image_width: 480
     image_height: 320
